fixing horizontal scrollbar

--- a/css/queries.css
+++ b/css/queries.css
@@ -15,24 +15,6 @@
   .gallery {
     grid-template-columns: repeat(2, 1fr);
   }
-
-  /*MOBILE NAV*/
-  .mobile-nav {
-    border: none;
-    background: none;
-    cursor: pointer;
-    display: none;
-  }
-
-  .mobile-icon {
-    width: 4.8rem;
-    height: 4.8rem;
-    color: #333;
-  }
-
-  .mobile-icon[name='close-outline'] {
-    display: none;
-  }
 }
 
 /*1200px Tablets Landscape*/
@@ -229,5 +211,63 @@
   .grid--3cols,
   .grid--4cols {
     grid-template-columns: 1fr;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .hero-image-box,
+  .hero-text-box {
+    width: 80%;
+    text-align: center;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .logos img {
+    height: 1.2rem;
+  }
+
+  .step-image-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .step-image-box:nth-child(6) {
+    grid-row: 5;
+  }
+
+  .step-image-box {
+    transform: translateY(2.4rem);
+  }
+
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.2rem;
+  }
+
+  .cta {
+    grid-template-columns: 1fr;
+  }
+
+  .cta-image {
+    height: 32rem;
+    grid-row: 1;
+  }
+
+  .cta-content {
+    padding: 3.2rem;
   }
 }
