--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,13 @@ body {
 .header {
   background: #fdf2e9;
   height: 9.6rem; /*Because we want header to be sticky*/
-  position: sticky;
-  top: 0;
   padding: 0 4.8rem; /*padding para dar espaçamento left/right, o mesmo pode ser feito usando max-width*/
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  position: relative;
 }
 
 .logo {
@@ -63,6 +63,24 @@ body {
 .main-nav-link:hover,
 .main-nav:active {
   color: #cf711f;
+}
+
+/*MOBILE NAV*/
+.mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+
+.mobile-icon {
+  width: 4.8rem;
+  height: 4.8rem;
+  color: #333;
+}
+
+.mobile-icon[name='close-outline'] {
+  display: none;
 }
 
 .nav-cta:link,
@@ -115,49 +133,6 @@ body {
   font-size: 2rem;
   line-height: 1.6;
   margin-bottom: 4.6rem;
-}
-
-/**************************/
-/*BUTTONS HERO SECTION*/
-/**************************/
-.btn:link,
-.btn:visited {
-  font-size: 2rem;
-  text-decoration: none;
-  font-weight: 600;
-
-  display: inline-block;
-  padding: 1.6rem 3.2rem; /*half top bottom, double right and left*/
-  border-radius: 9px;
-
-  /*animation*/
-  transition: all 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background: none;
-
-  /*trick to add border hover without jumping*/
-  /*create the border inside of the element*/
-  box-shadow: 0 0 0 2px #fff;
 }
 
 /**************************/
@@ -347,7 +322,7 @@ body {
 }
 
 .tag {
-  display: inline; /*mudando display para conseguir aplicar padding padding top/bottom*/
+  display: inline-block; /*mudando display para conseguir aplicar padding padding top/bottom*/
   padding: 0.4rem 0.8rem; /*aplicando padding top/bottom*/
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -617,6 +592,8 @@ body {
 
 .cta {
   display: grid;
+
+  /*2/3 = 66.6% - 1/3 = 33.3%*/
   grid-template-columns: 2fr 1fr;
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
@@ -805,66 +782,44 @@ body {
 }
 
 /**************************/
-/* REUSABLE CLASSES */
+/*BUTTONS HERO SECTION*/
 /**************************/
-.container {
-  max-width: 120rem; /*convention: 1140px*/
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
-.grid {
-  display: grid;
-  column-gap: 6.4rem;
-  row-gap: 9.6rem;
-  margin-bottom: 9.6rem;
-}
-
-.grid--2cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--3cols {
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.grid--4cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.grid-center-v {
-  align-items: center;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem;
-}
-
-.margin-bottom-md {
-  margin-bottom: 4.8rem;
-}
-
-.center-text {
-  text-align: center;
-}
-
-strong {
-  font-weight: 500;
-}
-
-.link:link,
-.link:visited {
-  color: #e67e22;
+.btn:link,
+.btn:visited {
+  font-size: 2rem;
   text-decoration: none;
-  border-bottom: 1px solid currentColor;
-  transition: all 0.3s;
+  font-weight: 600;
 
   display: inline-block;
-  padding-bottom: 2px;
+  padding: 1.6rem 3.2rem; /*half top bottom, double right and left*/
+  border-radius: 9px;
+
+  /*animation*/
+  transition: all 0.3s;
 }
 
-.link:active,
-.link:hover {
-  color: #cf711f;
-  border-bottom: 1px solid transparent;
+.btn--full:link,
+.btn--full:visited {
+  background: #e67e22;
+  color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background: #fff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background: none;
+
+  /*trick to add border hover without jumping*/
+  /*create the border inside of the element*/
+  box-shadow: 0 0 0 2px #fff;
 }
